[gd_scene load_steps=8 format=3 uid="uid://baka1lfkr3ogv"]

[ext_resource type="Script" path="res://scripts/Enemy_rotation.gd" id="1_fgn6f"]
[ext_resource type="Texture2D" uid="uid://dt56buke2cpnr" path="res://assets/NOTbeholder.png" id="2_lqqfr"]
[ext_resource type="Texture2D" uid="uid://jvu2usl2uyes" path="res://assets/full-heart.png" id="3_hv8xr"]
[ext_resource type="FontFile" uid="uid://cwsttq2b3u42u" path="res://assets/alagard.ttf" id="4_82kk2"]
[ext_resource type="Texture2D" uid="uid://cdg3bh24y1ofw" path="res://assets/boss-icon.png" id="5_dq5cp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f3tcx"]
transparency = 1
albedo_texture = ExtResource("2_lqqfr")

[sub_resource type="PlaneMesh" id="PlaneMesh_bafsb"]
material = SubResource("StandardMaterial3D_f3tcx")
size = Vector2(1.1, 1.8)
orientation = 2

[node name="Enemy" type="Node3D" node_paths=PackedStringArray("enemy")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_fgn6f")
enemy = NodePath("MeshInstance3D")
bobbing_speed = 0.3
bobbing_range = 10.0
bobbing_center = 5.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_bafsb")

[node name="EnemyHUD" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.67954, 0)

[node name="HealthImage" type="Sprite3D" parent="MeshInstance3D/EnemyHUD"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.144, 0, 0)
shaded = true
texture = ExtResource("3_hv8xr")
region_rect = Rect2(0, 0, 512, 512)

[node name="HealthText" type="Label3D" parent="MeshInstance3D/EnemyHUD"]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -0.334, 0, 0)
shaded = true
text = "2"
font = ExtResource("4_82kk2")
font_size = 100

[node name="TypeImage" type="Sprite3D" parent="MeshInstance3D/EnemyHUD"]
transform = Transform3D(0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0.172, 0, 0)
shaded = true
texture = ExtResource("5_dq5cp")
region_rect = Rect2(0, 0, 512, 512)
